# ComparisonTool

./: ReadME.md  comparison_result.json  pyproject.toml  usage.md
comparators/: Example.yml  JSONComparator.py  NumpyEncoder.py  RNAseq_config.yml  ROCrateComp.py  __init__.py  base.py  binary.py  comp_config.yml  comp_config_crate.yml  comparison_cli.py  comparison_config.yaml  crate_writer.py  file_resolver.py  generic.py  generictestconf.yml  hdf5.py  image.py  manager.py  mincsv_test.yml  mincsv_test_crate.yml  nonROCrateComp.py  tabular.py  testcomparator.py
comparators.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
comparators/bioinfo/: __init__.py  bam.py  fasta.py  vcf.py
